[package]
name = "domfuzz"
version = "0.1.0"
edition = "2021"
authors = ["Albert Hui <albert@securityronin.com>"]
description = "A Rust CLI tool for generating domain name variations using typosquatting techniques"
license = "MIT"
repository = "https://github.com/securityronin/domfuzz"
keywords = ["security", "typosquatting", "domains", "cybersecurity", "phishing"]
categories = ["command-line-utilities", "security"]

[[bin]]
name = "domfuzz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
url = "2.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
trust-dns-resolver = "0.23"